--- a/rootdir/etc/init.qcom.rc
+++ b/rootdir/etc/init.qcom.rc
@@ -12,9 +12,19 @@ service vendor.ss_ramdump_local /vendor/bin/subsystem_ramdump
     group system
     disabled
 
+on property:init.svc.vendor.cnss_diag=running
+    stop vendor.cnss_diag
+
+on property:init.svc.vendor.ipacm-diag=running
+    stop vendor.ipacm-diag
+
 on property:persist.vendor.sys.ssr.enable_ramdumps=1
     start vendor.ss_ramdump_local
 
 on property:persist.vendor.sys.ssr.enable_ramdumps=0
     stop vendor.ss_ramdump
     stop vendor.ss_ramdump_local
+
+on property:sys.boot_completed=1
+    stop vendor.ss_ramdump
+
